@@ -11,6 +11,9 @@ libsoup2.4 (2.42.2-2) UNRELEASED; urgency=low
   * Upload to unstable.
   * Track stable releases again.
   * Make test-suite failures fatal again, so regressions don't go unnoticed.
+  * Add Build-Depends on dbus, dbus-x11, xvfb, xauth and curl for running the
+    test-suite.
+  * Run make under xvfb so dbus-launch works properly.
 
  -- Michael Biebl <biebl@debian.org>  Fri, 10 May 2013 03:25:26 +0200
 
